<resources>
    <string name="app_name">My Application</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="comma">,</string>
    <string name="ParenthesisOpen">(</string>
    <string name="parenthesisClose">)</string>
    <string name="ce">ce</string>
    <string name="subtraction">-</string>
    <string name="sum">+</string>
    <string name="multiple">*</string>
    <string name="division">/</string>
    <string name="pow">^2</string>
    <string name="sqrt">√</string>
    <string name="equals">=</string>
    <string name="pov">^</string>
</resources>